--- a/packages.bib
+++ b/packages.bib
@@ -143,7 +143,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2019},
-  note = {R package version 1.24},
+  note = {R package version 1.26},
   url = {https://CRAN.R-project.org/package=knitr},
 }
 @Manual{R-lme4,
@@ -235,7 +235,7 @@ Research},
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2019},
-  note = {R package version 1.15},
+  note = {R package version 1.17},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 @Manual{R-sjPlot,
@@ -307,4 +307,248 @@ Computations},
   year = {2019},
   note = {R package version 4.8.0},
   url = {https://CRAN.R-project.org/package=VIM},
+}
+@Book{bookdown2016,
+  title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2016},
+  note = {ISBN 978-1138700109},
+  url = {https://github.com/rstudio/bookdown},
+}
+@Book{car2019,
+  title = {An {R} Companion to Applied Regression},
+  edition = {Third},
+  author = {John Fox and Sanford Weisberg},
+  year = {2019},
+  publisher = {Sage},
+  address = {Thousand Oaks {CA}},
+  url = {https://socialsciences.mcmaster.ca/jfox/Books/Companion/},
+}
+@TechReport{colorspace2019a,
+  title = {{colorspace}: A Toolbox for Manipulating and Assessing Colors and Palettes},
+  author = {Achim Zeileis and Jason C. Fisher and Kurt Hornik and Ross Ihaka and Claire D. McWhite and Paul Murrell and Reto Stauffer and Claus O. Wilke},
+  year = {2019},
+  institution = {arXiv.org E-Print Archive},
+  type = {arXiv},
+  number = {1903.06490},
+  month = {March},
+  url = {http://arxiv.org/abs/1903.06490},
+}
+@Article{colorspace2009a,
+  title = {Escaping {RGB}land: Selecting Colors for Statistical Graphics},
+  author = {Achim Zeileis and Kurt Hornik and Paul Murrell},
+  journal = {Computational Statistics \& Data Analysis},
+  year = {2009},
+  volume = {53},
+  number = {9},
+  pages = {3259--3270},
+  doi = {10.1016/j.csda.2008.11.033},
+}
+@Article{colorspace2009b,
+  title = {Somewhere over the Rainbow: How to Make Effective Use of Colors in Meteorological Visualizations},
+  author = {Reto Stauffer and Georg J. Mayr and Markus Dabernig and Achim Zeileis},
+  journal = {Bulletin of the American Meteorological Society},
+  year = {2009},
+  volume = {96},
+  number = {2},
+  pages = {203--216},
+  doi = {10.1175/BAMS-D-13-00155.1},
+}
+@Manual{corrplot2017,
+  title = {R package "corrplot": Visualization of a Correlation Matrix},
+  author = {Taiyun Wei and Viliam Simko},
+  year = {2017},
+  note = {(Version 0.84)},
+  url = {https://github.com/taiyun/corrplot},
+}
+@Book{effects2019,
+  title = {An R Companion to Applied Regression},
+  edition = {3rd},
+  author = {John Fox and Sanford Weisberg},
+  year = {2019},
+  publisher = {Sage},
+  address = {Thousand Oaks CA},
+  url = {http://tinyurl.com/carbook},
+}
+@Article{effects2018,
+  title = {Visualizing Fit and Lack of Fit in Complex Regression Models with Predictor Effect Plots and Partial Residuals},
+  author = {John Fox and Sanford Weisberg},
+  journal = {Journal of Statistical Software},
+  year = {2018},
+  volume = {87},
+  number = {9},
+  pages = {1--27},
+  doi = {10.18637/jss.v087.i09},
+  url = {https://www.jstatsoft.org/v087/i09},
+}
+@Article{effects2003,
+  title = {Effect Displays in {R} for Generalised Linear Models},
+  author = {John Fox},
+  journal = {Journal of Statistical Software},
+  year = {2003},
+  volume = {8},
+  number = {15},
+  pages = {1--27},
+  url = {http://www.jstatsoft.org/v08/i15/},
+}
+@Article{effects2009,
+  title = {Effect Displays in {R} for Multinomial and Proportional-Odds Logit Models: Extensions to the {effects} Package},
+  author = {John Fox and Jangman Hong},
+  journal = {Journal of Statistical Software},
+  year = {2009},
+  volume = {32},
+  number = {1},
+  pages = {1--24},
+  url = {http://www.jstatsoft.org/v32/i01/},
+}
+@Article{RJ-2017-037,
+  title = {Furniture for Quantitative Scientists},
+  author = {Tyson S. Barrett and Emily Brignone},
+  year = {2017},
+  journal = {The R Journal},
+  volume = {9},
+  number = {2},
+  doi = {10.32614/RJ-2017-037},
+  url = {https://journal.r-project.org/archive/2017/RJ-2017-037/RJ-2017-037.pdf},
+  pages = {142--148},
+}
+@Article{geepack2006,
+  title = {The R Package geepack for Generalized Estimating Equations},
+  author = {SÃ¸ren HÃ¸jsgaard and Ulrich Halekoh and Jun Yan},
+  year = {2006},
+  journal = {Journal of Statistical Software},
+  volume = {15/2},
+  pages = {1--11},
+}
+@Article{geepack2004,
+  title = {Estimating Equations for Association Structures},
+  author = {Jun Yan and Jason P. Fine},
+  year = {2004},
+  journal = {Statistics in Medicine},
+  volume = {23},
+  pages = {859--880},
+}
+@Article{geepack2002,
+  title = {geepack: Yet Another Package for Generalized Estimating Equations},
+  author = {Jun Yan},
+  year = {2002},
+  journal = {R-News},
+  volume = {2/3},
+  pages = {12--14},
+}
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+@Article{HLMdiag2014,
+  title = {{HLMdiag}: A Suite of Diagnostics for Hierarchical Linear Models in {R}},
+  author = {Adam Loy and Heike Hofmann},
+  journal = {Journal of Statistical Software},
+  year = {2014},
+  volume = {56},
+  number = {5},
+  pages = {1--28},
+  url = {http://www.jstatsoft.org/v56/i05/},
+}
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.name/knitr/},
+}
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+@Article{lme42015,
+  title = {Fitting Linear Mixed-Effects Models Using {lme4}},
+  author = {Douglas Bates and Martin M{\"a}chler and Ben Bolker and Steve Walker},
+  journal = {Journal of Statistical Software},
+  year = {2015},
+  volume = {67},
+  number = {1},
+  pages = {1--48},
+  doi = {10.18637/jss.v067.i01},
+}
+@Article{lmerTest2017,
+  title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
+  author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B. Christensen},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {82},
+  number = {13},
+  pages = {1--26},
+  doi = {10.18637/jss.v082.i13},
+}
+@Article{optimx2011,
+  title = {Unifying Optimization Algorithms to Aid Software System Users: {optimx} for {R}},
+  author = {John C. Nash and Ravi Varadhan},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {43},
+  number = {9},
+  pages = {1--14},
+  url = {http://www.jstatsoft.org/v43/i09/},
+}
+@Article{optimx2014,
+  title = {On Best Practice Optimization Methods in {R}},
+  author = {John C. Nash},
+  journal = {Journal of Statistical Software},
+  year = {2014},
+  volume = {60},
+  number = {2},
+  pages = {1--14},
+  url = {http://www.jstatsoft.org/v60/i02/},
+}
+@Book{rmarkdown2018,
+  title = {R Markdown: The Definitive Guide},
+  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2018},
+  note = {ISBN 9781138359338},
+  url = {https://bookdown.org/yihui/rmarkdown},
+}
+@Manual{sjstats2019,
+  title = {sjstats: Statistical Functions for Regression Models (Version 0.17.5)},
+  author = {Daniel Lüdecke},
+  year = {2019},
+  url = {https://CRAN.R-project.org/package=sjstats},
+  doi = {10.5281/zenodo.1284472},
+}
+@Article{texreg2013,
+  title = {{texreg}: Conversion of Statistical Model Output in {R} to {\LaTeX} and {HTML} Tables},
+  author = {Philip Leifeld},
+  journal = {Journal of Statistical Software},
+  year = {2013},
+  volume = {55},
+  number = {8},
+  pages = {1--24},
+  url = {http://www.jstatsoft.org/v55/i08/},
+}
+@Article{VIM2016,
+  title = {Imputation with the {R} Package {VIM}},
+  author = {Alexander Kowarik and Matthias Templ},
+  journal = {Journal of Statistical Software},
+  year = {2016},
+  volume = {74},
+  number = {7},
+  pages = {1--16},
+  doi = {10.18637/jss.v074.i07},
 }
