change png path to PNG

--- a/06-example_hox2_nurses.Rmd
+++ b/06-example_hox2_nurses.Rmd
@@ -1,6 +1,6 @@
 # MLM, 3 levels: Nurse's Stress Intervention
 
-![](images/header_hox_nurses.png)
+![](images/header_hox_nurses.PNG)
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
@@ -45,7 +45,7 @@ The following example is used through out @hox2017's chapater 2.
 >
 > The **nurses.sav** file contains three-level simulated data from a hypothetical study on stress in hospitals.  The data are from nurses working in wards nested within hospitals.  It is a cluster-randomized experiment.  In each of **25** hospitals, **four wards** are selected and randomly assigned to an experimental and a control condition.  In the experimental condition, a training program is offered to all nurses to cope with job-related stress.  After the program is completed, a sample of about 10 nurses from each ward is given a test that measures job-related stress.  Additional variables *(covariates)* are: nurse age (years), nurse experience (years), nurse gender (0=male, 1 = female), type of ward (0=general care, 1=special care), and hospital size (0=small, 1 = medium, 2=large).  The data have been generated to illustrate three-level analysis with a random slope for the effect of the intervention.
 
-![](images/diagram_hox_nurses.png)
+![](images/diagram_hox_nurses.PNG)
 
 
 Here the data is read in and the SPSS variables with labels are converted to $R$ factors. 
