attempting to fix image paths

--- a/05-example_hox2_popular2.Rmd
+++ b/05-example_hox2_popular2.Rmd
@@ -1,6 +1,6 @@
 # MLM, 2-levels: Pupil Popularity
 
-![](images/header_hox_popular2.PNG)
+![](../images/header_hox_popular2.PNG)
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(comment     = "",
